syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

// CmdId: 509
// EnetChannelId: 0
// EnetIsReliable: true
// IsAllowClient: true
message NpcTalkReq {
	uint32 npc_entity_id = 5;
	uint32 talk_id = 7;
	uint32 entity_id = 6;
}
